--- a/package.json
+++ b/package.json
@@ -551,7 +551,7 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
-    "prod": "parcel build src/index.html"
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "optionalDependencies": {
